--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -70,29 +70,29 @@
         <div class="ion-padding-top ion-padding-start">
           <ion-text><b>Your Summary</b></ion-text>
         </div>
-        <ion-grid class="ion-padding-start">
+        <ion-grid style="--ion-grid-columns: 14;" class="ion-padding-start">
           <ion-row>
-            <ion-col size-md="2" size-xs="3" class="ion-padding ion-margin-end ion-margin-bottom" style="background-color: #F3F4F6;">
+            <ion-col size-md="2" size-xs="4" class="ion-padding ion-margin-end ion-margin-bottom" style="background-color: #F3F4F6;">
               <b>10</b><br><br>
               <span style="font-size: small;">Total Mentions</span>
             </ion-col>
-            <ion-col size-md="2" size-xs="3" class="ion-padding ion-margin-end ion-margin-bottom" style="background-color: #F3F4F6;">
+            <ion-col size-md="2" size-xs="4" class="ion-padding ion-margin-end ion-margin-bottom" style="background-color: #F3F4F6;">
               <b>10</b><br><br>
               <span style="font-size: small;">Repeat Sessions</span>
             </ion-col>
-            <ion-col size-md="2" size-xs="3" class="ion-padding ion-margin-end ion-margin-bottom" style="background-color: #F3F4F6;">
+            <ion-col size-md="2" size-xs="4" class="ion-padding ion-margin-end ion-margin-bottom" style="background-color: #F3F4F6;">
               <b>$1000</b><br><br>
               <span style="font-size: small;">Total Avenues</span>
             </ion-col>
-            <ion-col size-md="2" size-xs="3" class="ion-padding ion-margin-end ion-margin-bottom" style="background-color: #F3F4F6;">
+            <ion-col size-md="2" size-xs="4" class="ion-padding ion-margin-end ion-margin-bottom" style="background-color: #F3F4F6;">
               <b>10</b><br><br>
               <span style="font-size: small;">Months on Neonvest</span>
             </ion-col>
-            <ion-col size-md="2" size-xs="3" class="ion-padding ion-margin-end ion-margin-bottom" style="background-color: #F3F4F6;">
+            <ion-col size-md="2" size-xs="4" class="ion-padding ion-margin-end ion-margin-bottom" style="background-color: #F3F4F6;">
               <b>4.1</b><br><br>
               <span style="font-size: small;">Average Rating</span>
             </ion-col>
-            <ion-col size-md="2" size-xs="3" class="ion-padding ion-margin-end ion-margin-bottom" style="background-color: #F3F4F6;">
+            <ion-col size-md="2" size-xs="4" class="ion-padding ion-margin-end ion-margin-bottom" style="background-color: #F3F4F6;">
               <b>78%</b><br><br>
               <span style="font-size: small;">Match Quality</span>
             </ion-col>
