grid setups for few sections

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -33,8 +33,8 @@
                   <ion-item lines="none">
                     <ion-img class="ion-margin-end ion-margin-top" style="cursor: pointer; width: 60px; height: 60px;" src="../assets/head_prof.jpg"></ion-img>
                     <ion-label>
-                      <ion-text style="cursor: pointer;" class="ion-margin-end">Ground Up</ion-text>
-                      <ion-chip>94% Engagement Rate</ion-chip>
+                      <ion-text style="cursor: pointer; margin-right: 8px;">Ground Up</ion-text>
+                      <ion-chip class="ion-no-margin">94% Engagement Rate</ion-chip>
                       <p style="color: white;">
                         Technology • B2B • Series A
                       </p>
