--- a/src/app/investment/investment.page.html
+++ b/src/app/investment/investment.page.html
@@ -36,12 +36,23 @@
                       <p style="color: white;">
                         Technology • B2B • Series A
                       </p>
-                      <ion-item lines="none" class="ion-no-padding">
-                        <ion-icon class="ion-margin-end" style="cursor: pointer; color: #D97706;" name="earth-outline"></ion-icon>
-                        <ion-text style="cursor: pointer; font-size: x-small;">www.shabang.com</ion-text>
-                        <ion-icon class="ion-margin-start ion-padding-start ion-margin-end" style="cursor: pointer; color: #D97706;" name="location-outline"></ion-icon>
-                        <ion-text style="cursor: pointer; font-size: x-small;">Malibourne, Australia</ion-text>
-                      </ion-item>
+                      <ion-grid class="ion-no-padding">
+                        <ion-row>
+                          <ion-col size-xs="12" size-md="5" class="ion-no-padding">
+                            <ion-item lines="none" class="ion-no-padding">
+                              <ion-icon class="ion-margin-end" style="cursor: pointer; color: #D97706;" name="earth-outline"></ion-icon>
+                              <ion-text style="cursor: pointer; font-size: x-small;">www.shabang.com</ion-text>
+                            </ion-item>
+                          </ion-col>
+                          <ion-col size="1"></ion-col>
+                          <ion-col size-xs="12" size-md="5" class="ion-no-padding">
+                            <ion-item lines="none" class="ion-no-padding">
+                              <ion-icon class="ion-margin-end" style="cursor: pointer; color: #D97706;" name="location-outline"></ion-icon>
+                              <ion-text style="cursor: pointer; font-size: x-small;">Malibourne, Australia</ion-text>
+                            </ion-item>
+                          </ion-col>
+                        </ion-row>
+                      </ion-grid>
                     </ion-label>
                   </ion-item>
                 </ion-col>
@@ -152,28 +163,35 @@
         <div class="ion-padding-top ion-padding-start">
           <ion-text><b>Supporting Materials</b></ion-text>
         </div><br>
-        <ion-item lines="none">
-          <ion-thumbnail>
-            <ion-img src="../assets/file.png"></ion-img>
-          </ion-thumbnail>
-          <ion-label class="ion-margin-start">
-            <ion-item style="cursor: pointer;" lines="none" class="ion-no-padding">
-              <ion-text style="text-decoration: underline;" slot="start">GroundUp_Pitch_Desk.pdf</ion-text>
-              <ion-text slot="end" style="color: var(--ion-color-step-600, #666666);"><ion-icon name="download-outline"></ion-icon> Download</ion-text>
-            </ion-item>
-            <p>File Size:3MB</p>
-          </ion-label>
-        </ion-item>
-      
-        <ion-item lines="none">
-          <ion-icon name="link-outline"></ion-icon>
-          <ion-label class="ion-margin-start">
-            <ion-item style="cursor: pointer;" lines="none" class="ion-no-padding">
-              <ion-text slot="start" style="color: var(--ion-color-step-600, #666666); text-decoration: underline;">GroundUpPitchdesk.googlesheet.com</ion-text>
-              <ion-text slot="end" style="color: var(--ion-color-step-600, #666666);"><ion-icon name="link-outline"></ion-icon> Copy Link</ion-text>
-            </ion-item>
-          </ion-label>
-        </ion-item>
+        <ion-grid class="ion-no-padding">
+          <ion-row>
+            <ion-col size="9" class="ion-no-padding">
+              <ion-item lines="none">
+                <ion-thumbnail style="max-width: 30px; max-height: 30px;">
+                  <ion-img src="../assets/file.png"></ion-img>
+                </ion-thumbnail>
+                <ion-label class="ion-margin-start">
+                  <ion-text style="text-decoration: underline;">GroundUp_Pitch_desk.pdf</ion-text>
+                  <p>File Size:3MB</p>
+                </ion-label>
+              </ion-item>
+            </ion-col>
+            <ion-col size="3" class="ion-text-end ion-margin-top ion-no-padding">
+              <ion-text style="color: var(--ion-color-step-600, #666666);"><ion-icon name="download-outline"></ion-icon> Download</ion-text>
+            </ion-col>
+            <ion-col size="9" class="ion-no-padding">
+              <ion-item lines="none">
+                <ion-icon name="link-outline"></ion-icon>
+                <ion-label class="ion-margin-start">
+                  <ion-text style="color: var(--ion-color-step-600, #666666); text-decoration: underline;">GroundUpPitchdesk.googlesheet.com</ion-text>
+                </ion-label>
+              </ion-item>
+            </ion-col>
+            <ion-col size="3" class="ion-text-end ion-margin-top ion-no-padding">
+              <ion-text style="color: var(--ion-color-step-600, #666666);"><ion-icon name="link-outline"></ion-icon> Copy Link</ion-text>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
         <ion-item-divider></ion-item-divider>
       
         <div class="ion-padding-top ion-padding-start">
@@ -187,7 +205,7 @@
             </b>
           </ion-text>
         </div><br>
-        <ion-grid class="adj_items">
+        <ion-grid class="hidden-sm-down">
           <ion-row>
             <ion-col size="3" class="ion-text-center">
               <div style="display: flex; align-items: center; justify-items: center; justify-content: center;">
@@ -231,6 +249,71 @@
               <ion-progress-bar class="ion-margin-top" style="--progress-background: #10B981;" value="0.4"></ion-progress-bar>
             </ion-col>
             <ion-col size="1"></ion-col>
+          </ion-row>
+        </ion-grid>
+
+        <ion-grid class="hidden-md-up">
+          <ion-row>
+            <ion-col size="5">
+              <div style="display: flex; align-items: center;">
+                <b style="font-size: small;">Market Opportunity</b>
+                <ion-icon style="cursor: pointer; color: var(--ion-color-step-600, #666666); font-size: large;" name="alert-circle-outline"></ion-icon>
+              </div>
+            </ion-col>
+            <ion-col size="5">
+              <ion-progress-bar style="margin-top: 8px; --progress-background: #10B981;" value="0.5"></ion-progress-bar>
+            </ion-col>
+            <ion-col size="2">
+              <ion-text>3.5</ion-text>
+            </ion-col>
+            <ion-col size="5">
+              <div style="display: flex; align-items: center;">
+                <b style="font-size: small;">Product Differentiation</b>
+                <ion-icon style="cursor: pointer; color: var(--ion-color-step-600, #666666); font-size: large;" name="alert-circle-outline"></ion-icon>
+              </div>
+            </ion-col>
+            <ion-col size="5">
+              <ion-progress-bar style="margin-top: 8px; --progress-background: #10B981;" value="0.8"></ion-progress-bar>
+            </ion-col>
+            <ion-col size="2">
+              <ion-text>5.0</ion-text>
+            </ion-col>
+            <ion-col size="5">
+              <div style="display: flex; align-items: center;">
+                <b style="font-size: small;">Investability</b>
+                <ion-icon style="cursor: pointer; color: var(--ion-color-step-600, #666666); font-size: large;" name="alert-circle-outline"></ion-icon>
+              </div>
+            </ion-col>
+            <ion-col size="5">
+              <ion-progress-bar style="margin-top: 8px; --progress-background: #FBBF24;" value="0.2"></ion-progress-bar>
+            </ion-col>
+            <ion-col size="2">
+              <ion-text>2.0</ion-text>
+            </ion-col>
+            <ion-col size="5">
+              <div style="display: flex; align-items: center;">
+                <b style="font-size: small;">Team</b>
+                <ion-icon style="cursor: pointer; color: var(--ion-color-step-600, #666666); font-size: large;" name="alert-circle-outline"></ion-icon>
+              </div>
+            </ion-col>
+            <ion-col size="5">
+              <ion-progress-bar style="margin-top: 8px; --progress-background: #10B981;" value="1"></ion-progress-bar>
+            </ion-col>
+            <ion-col size="2">
+              <ion-text>4.0</ion-text>
+            </ion-col>
+            <ion-col size="5">
+              <div style="display: flex; align-items: center;">
+                <b style="font-size: small;">Traction</b>
+                <ion-icon style="cursor: pointer; color: var(--ion-color-step-600, #666666); font-size: large;" name="alert-circle-outline"></ion-icon>
+              </div>
+            </ion-col>
+            <ion-col size="5">
+              <ion-progress-bar style="margin-top: 8px; --progress-background: #10B981;" value="0.4"></ion-progress-bar>
+            </ion-col>
+            <ion-col size="2">
+              <ion-text>3.0</ion-text>
+            </ion-col>
           </ion-row>
         </ion-grid>
       </ion-col>
